# Tetris

./: CMakeLists.txt
includes/: game.h  main.h  winmgr.h
includes/items/: blocks.h  colors.h  defines.h
includes/lib/: option.h  terminal.h
src/: game.cpp  main.cpp  winmgr.cpp
src/items/: blocks.cpp  colors.cpp
src/lib/: option.cpp  terminal.cpp
